--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Gameboy CSS Illustration</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/index.css">
   </head>
   <body>
     <h1>Gameboy CSS Illustration</h1>
-    <div class="gameboy">
+
+    <div class="gameboy"></div>
+
+    <div class="screen-border">
+      <div class="screen"></div>
     </div>
 
     <script src="src/index.js" async defer></script>
