working on arrow button, screen finished

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <div class="screen"></div>
     </div>
 
+    <div class="directional">
+      <span class="arrow"></span>
+      <span class="circle"></span>
+    </div>
+
     <script src="src/index.js" async defer></script>
   </body>
 </html>
