fixing out & inset shadows on gameboy body

--- a/index.html
+++ b/index.html
@@ -10,17 +10,33 @@
   </head>
   <body>
     <h1>Gameboy CSS Illustration</h1>
-
+    <!-- BODY -->
     <div class="gameboy"></div>
 
+    <!-- TOP SQUARE BORDERS -->
+    <div class="top-borders"></div>
+
+    <!-- SCREEN -->
     <div class="screen-border">
       <div class="screen"></div>
+      <div class="battery"></div>
     </div>
 
+    <!-- Nintendo GAME BOY -->
+
+    <!-- ARROW PAD -->
     <div class="directional">
       <span class="arrow"></span>
       <span class="circle"></span>
     </div>
+
+    <!-- A & B BUTTONS -->
+    <div class="buttons">
+      <div class="a"></div>
+      <div class="b"></div>
+    </div>
+
+    <!-- START & SELECT BUTTONS -->
 
     <script src="src/index.js" async defer></script>
   </body>
